<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/mainlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/resultEdit"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="TextView" />

        <LinearLayout
            android:id="@+id/buttonRow5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button07"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btn07Click"
                android:text="@string/button7" />

            <Button
                android:id="@+id/button08"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btn08Click"
                android:text="@string/button8" />

            <Button
                android:id="@+id/button09"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btn09Click"
                android:text="@string/button9" />

            <Button
                android:id="@+id/buttonMult"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btnMultiplyClick"
                android:text="@string/buttonMult" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonRow4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button04"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btn04Click"
                android:text="@string/button4" />

            <Button
                android:id="@+id/button05"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btn05Click"
                android:text="@string/button5" />

            <Button
                android:id="@+id/button06"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btn06Click"
                android:text="@string/button6" />

            <Button
                android:id="@+id/buttonDiv"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btnDivideClick"
                android:text="@string/buttondiv" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonRow3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button01"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btn01Click"
                android:text="@string/button1" />

            <Button
                android:id="@+id/button02"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btn02Click"
                android:text="@string/button2" />

            <Button
                android:id="@+id/button03"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btn03Click"
                android:text="@string/button3" />

            <Button
                android:id="@+id/buttonPlus"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btnAddClick"
                android:text="@string/buttonPlus" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button00"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btn00Click"
                android:text="@string/button0" />

            <Button
                android:id="@+id/buttonCE"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btnClearClick"
                android:text="@string/buttonCE" />

            <Button
                android:id="@+id/buttonDot"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btnDotClick"
                android:text="@string/buttonDot" />

            <Button
                android:id="@+id/buttonSub"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btnMinusClick"
                android:text="@string/buttonSub" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button17"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btnResultClick"
                android:text="@string/buttonEq" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>